--- a/Celeste/SkinModTemplate/index.html
+++ b/Celeste/SkinModTemplate/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Button with Images</title>
+    <title>Skin Mod Template Picker</title>
     <style>
 
         h1 {
@@ -125,7 +125,7 @@
         </div>
 
         <footer>
-            The sprite count includes only sprites where madeline is seen directly and is not accurate I just estimated something
+            The sprite count includes only sprites where madeline is seen directly and is not accurate I just estimated them lol
         </footer>
     </div>
 
