--- a/Celeste/SkinModTemplate/index.html
+++ b/Celeste/SkinModTemplate/index.html
@@ -8,7 +8,9 @@
 
         body {
             margin: 0;
+            background-color: #1b152c;
         }
+
         .bg {
             background-image: url(Images/Farewell_BG.png);
             background-size: cover;
@@ -40,6 +42,7 @@
             flex-direction: column;
             width: 100%;
             overflow: hidden;
+            padding-bottom: 20px;
         }
 
         .grid-container{
@@ -69,6 +72,7 @@
         .count {
             display: flex;
             align-items: center;
+            justify-content: center;
             color: #bebebead;
             border-radius: 13px;
             height: 30px;
@@ -76,20 +80,42 @@
             box-shadow: rgb(0, 0, 0) 0px 30px 60px -50px inset, rgba(0, 0, 0, 0) 0px 18px 36px -18px inset;
         }
 
+        .menu {
+            margin: 20px;
+            position: absolute;
+            text-decoration: none;
+            background-color: #00000030;
+            height: 60px;
+            width: 60px;
+            box-shadow: rgb(0, 0, 0) 0px 30px 60px -50px inset, rgba(0, 0, 0, 0) 0px 18px 36px -18px inset, rgb(7, 7, 12) 0px 13px 27px -5px, rgb(0, 0, 0) 0px 8px 16px -8px;
+        }
+
         @media only screen and (max-width: 600px) { 
             h1 {
-            margin-top: 0;
-            font-size: 2.5rem;
-            color: rgba(240, 248, 255, 0.774);
-            text-align: center;
-            margin: 35px 20px 35px 20px;
-        }
+                margin-top: 0;
+                font-size: 2.5rem;
+                color: rgba(240, 248, 255, 0.774);
+                text-align: center;
+                margin: 20px 20px 35px 20px;
+            }
+
+            .bg {
+                transform: translateY(-20px);
+            }
+
+            .menu {
+                position: relative;
+                margin: 20px auto 0px auto;
+                height: 30px;
+                width: 120px;
+            }
         }
     </style>
 </head>
 <body>
 
     <div class="bg"></div>
+    <a href="changes.html" class="menu count"> changelog </a>
     
     <div class="wrapper">
         <h1>Pick the format that suits your skin the best</h1>
