--- a/Celeste/SkinModTemplate/index.html
+++ b/Celeste/SkinModTemplate/index.html
@@ -128,7 +128,7 @@
                 </p>
                 <div class="count">491 sprites</div>
             </a>
-            <a href="Backpack Only/SkinModTemplate-Backpack-Only.zip" class="page-link">
+            <a href="Backpack only/SkinModTemplate-Backpack-Only.zip" class="page-link">
                 <h3>Backpack only</h3>
                 <img src="Images/Backpack.png" alt="Button 1">
                 <p>
@@ -136,8 +136,8 @@
                 </p>
                 <div class="count">491 sprites</div>
             </a>
-            <a href="" class="page-link">
-                <h3>Full skinmod</h3>
+            <a href="Both/SkinModTemplate-Both.zip" class="page-link">
+                <h3>Both</h3>
                 <img src="Images/Full.png" alt="Button 2">
                 <p>
                     Use this if you want your character to have a separate set of sprites without a backpack. Works just like the normal game.
