--- a/Celeste/SkinModTemplate/changes.html
+++ b/Celeste/SkinModTemplate/changes.html
@@ -1,3 +1,155 @@
-<html>
-  I will finish this page soon
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Skin Mod Template Picker</title>
+    <style>
+
+        body {
+            margin: 0;
+            background-color: #1b152c;
+        }
+
+        .bg {
+            background-image: url(Images/Farewell_BG.png);
+            background-size: cover;
+            position: fixed;
+            margin: 0;
+            height: 100%;
+            width: 100%;
+            z-index: -100;
+        }
+
+        h1 {
+            font-size: 3rem;
+            color: rgba(240, 248, 255, 0.774);
+            text-align: center;
+            margin: 15vh 40px 15vh 40px;
+        }
+
+        h3 {
+            margin-top: 0;
+            margin-bottom: 15px;
+            font-size: 2rem;
+            color: rgba(240, 248, 255, 0.774);
+        }
+
+
+        .wrapper {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            width: 100%;
+            overflow: hidden;
+            padding-bottom: 20px;
+        }
+
+        .grid-container{
+            display: grid;
+            row-gap: 30px;
+            column-gap: 10px;
+            grid-template-columns: repeat(1, minmax(250px, 1fr));
+            padding: 10px;
+            width: 98%;
+            justify-items: center;
+        }
+
+        .grid-container div {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-decoration: none;
+            color: #ffffffdc;
+            padding: 20px;
+            background-color: #00000060;
+            border-radius: 5px;
+            margin: 0 10px;
+            height: fit-content;
+            box-shadow: rgb(7, 7, 12) 0px 13px 27px -5px, rgb(0, 0, 0) 0px 8px 16px -8px;
+            border-radius: 40px;
+            max-width: fit-content;
+        }
+
+        .count {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #bebebead;
+            border-radius: 13px;
+            height: 30px;
+            padding: 0 10px 0 10px;
+            box-shadow: rgb(0, 0, 0) 0px 30px 60px -50px inset, rgba(0, 0, 0, 0) 0px 18px 36px -18px inset;
+        }
+
+        .menu {
+            margin: 20px;
+            position: absolute;
+            text-decoration: none;
+            background-color: #00000030;
+            height: 60px;
+            width: 60px;
+            box-shadow: rgb(0, 0, 0) 0px 30px 60px -50px inset, rgba(0, 0, 0, 0) 0px 18px 36px -18px inset, rgb(7, 7, 12) 0px 13px 27px -5px, rgb(0, 0, 0) 0px 8px 16px -8px;
+        }
+
+        @media only screen and (max-width: 600px) { 
+            h1 {
+                margin-top: 0;
+                font-size: 2.5rem;
+                color: rgba(240, 248, 255, 0.774);
+                text-align: center;
+                margin: 20px 20px 35px 20px;
+            }
+
+            .bg {
+                transform: translateY(-20px);
+            }
+
+            .menu {
+                position: relative;
+                margin: 20px auto 0px auto;
+                height: 30px;
+                width: 120px;
+            }
+        }
+    </style>
+</head>
+<body>
+
+    <div class="bg"></div>
+    <a href="index.html" class="menu count"> Back </a>
+    
+    <div class="wrapper">
+        <h1>Changelog</h1>
+        <div class="grid-container">
+            <div >
+                <h3>Updated the skin templates</h3>
+                <p>
+                    - Removed the sweat texture<br>
+                    - Added popular modded animations (bench, elytra, pet)<br>
+                    - Restructured some smh+ stuff<br>
+                    - Added a few backpackless variant animations<br>
+                </p>
+                <div class="count">15.7.2024</div>
+            </div>
+            <div>
+                <h3>Modded animations and a new changelog</h3>
+                <p>
+                    - Finished the changelog page
+                </p>
+                <div class="count">15.6.2024</div>
+            </div>
+            <div>
+                <h3>Updated the website</h3>
+                <p>
+                    - Added a placeholder changelog page <br>
+                    - Made the main page more mobile friendly 
+                </p>
+                <div class="count">12.5.2024</div>
+            </div>
+          </div>
+    </div>
+    
+</body>
 </html>
