--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Main page</title>
 </head>
 <body>
-    <a href="Celeste/SkinModTemplate/index.html" class="page-link">
+    <a href="Celeste/SkinModTemplate/index.html" class="page-link"> Celeste Skin Templates </a>
 </body>
 </html>
