--- a/Celeste/SkinModTemplate/changes.html
+++ b/Celeste/SkinModTemplate/changes.html
@@ -126,6 +126,7 @@
             <div >
                 <h3>Updated the skin templates</h3>
                 <p>
+                    - Added a new template: Both<br>
                     - Removed the sweat texture<br>
                     - Added popular modded animations (bench, elytra, pet)<br>
                     - Restructured some smh+ stuff<br>
