--- a/Celeste/SkinModTemplate/changes.html
+++ b/Celeste/SkinModTemplate/changes.html
@@ -123,6 +123,16 @@
     <div class="wrapper">
         <h1>Changelog</h1>
         <div class="grid-container">
+             <div >
+                <h3>More modded animations</h3>
+                <p>
+                    - Somehow I forgot a lot of things so...
+                    - Added Kelper animations<br>
+                    - Added XaphanHelper animations<br>
+                    - Added a lot of custom emotes<br>
+                </p>
+                <div class="count">16.7.2024</div>
+            </div>
             <div >
                 <h3>Updated the skin templates</h3>
                 <p>
