--- a/Celeste/SkinModTemplate/changes.html
+++ b/Celeste/SkinModTemplate/changes.html
@@ -126,7 +126,7 @@
              <div >
                 <h3>More modded animations</h3>
                 <p>
-                    - Somehow I forgot a lot of things so...
+                    - Somehow I forgot a lot of things so...<br>
                     - Added Kelper animations<br>
                     - Added XaphanHelper animations<br>
                     - Added a lot of custom emotes<br>
