--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <a href="Celeste/SkinModTemplate/index.html" class="page-link"> Celeste Skin Templates </a>
+    <a href="Celeste/SkinCreator/SkinCreator.html" class="page-link"> Skin Creator </a>
 </body>
 </html>
