--- a/index.html
+++ b/index.html
@@ -6,7 +6,30 @@
     <title>Main page</title>
 </head>
 <body>
-    <a href="Celeste/SkinModTemplate/index.html" class="page-link"> Celeste Skin Templates </a>
-    <a href="Celeste/SkinCreator/SkinCreator.html" class="page-link"> Skin Creator </a>
+
+<marquee
+    direction="down"
+    width="250"
+    height="200"
+    behavior="alternate"
+    style="border:solid; position:absolute;">
+    <marquee behavior="alternate">
+        <a href="Celeste/SkinModTemplate/index.html" class="page-link"> Celeste Skin Templates </a>
+    </marquee>
+</marquee>
+
+<marquee
+    direction="down"
+    width="250"
+    height="200"
+    behavior="alternate"
+    scrollamount="13"
+    style="border:solid; position:absolute; pointer-events: none;">
+    <marquee behavior="alternate" direction="right" scrollamount="13">
+        <a href="Celeste/SkinCreator/SkinCreator.html" class="page-link" style="pointer-events: all;"> Skin Creator </a>
+    </marquee>
+</marquee>
+
+
 </body>
 </html>
