--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     behavior="alternate"
     style="border:solid; position:absolute;">
     <marquee behavior="alternate">
-        <a href="Celeste/SkinModTemplate/index.html" class="page-link"> Celeste Skin Templates </a>
+        <a href="Celeste/SkinModTemplate/" class="page-link"> Celeste Skin Templates </a>
     </marquee>
 </marquee>
 
