Change skinmod setup to happen on the website

--- a/Celeste/SkinModTemplate/changes.html
+++ b/Celeste/SkinModTemplate/changes.html
@@ -118,25 +118,23 @@
 <body>
 
     <div class="bg"></div>
-    <a href="index.html" class="menu count"> Back </a>
+    <a href="/" class="menu count"> Back </a>
     
     <div class="wrapper">
         <h1>Changelog</h1>
         <div class="grid-container">
-             <div >
-                <h3>More modded animations</h3>
+            <div >
+                <h3>Skinmod Setup Overhaul</h3>
                 <p>
-                    - Somehow I forgot a lot of things so...<br>
-                    - Added Kelper animations<br>
-                    - Added XaphanHelper animations<br>
-                    - Added a lot of custom emotes<br>
+                    - No more running bat files on your computer!<br>
+                    - The setup is now done by the website<br>
+                    - Some ui improvements<br>
                 </p>
-                <div class="count">16.7.2024</div>
+                <div class="count">28.3.2025</div>
             </div>
             <div >
                 <h3>Updated the skin templates</h3>
                 <p>
-                    - Added a new template: Both<br>
                     - Removed the sweat texture<br>
                     - Added popular modded animations (bench, elytra, pet)<br>
                     - Restructured some smh+ stuff<br>
