--- a/Celeste/SkinModTemplate/index.html
+++ b/Celeste/SkinModTemplate/index.html
@@ -4,156 +4,122 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skin Mod Template Picker</title>
-    <style>
-
-        body {
-            margin: 0;
-            background-color: #1b152c;
-        }
-
-        .bg {
-            background-image: url(Images/Farewell_BG.png);
-            background-size: cover;
-            position: fixed;
-            margin: 0;
-            height: 100%;
-            width: 100%;
-            z-index: -100;
-        }
-
-        h1 {
-            font-size: 3rem;
-            color: rgba(240, 248, 255, 0.774);
-            text-align: center;
-            margin: 15vh 40px 15vh 40px;
-        }
-
-        h3 {
-            margin-top: 0;
-            font-size: 2rem;
-            color: rgba(240, 248, 255, 0.774);
-        }
-
-
-        .wrapper {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            width: 100%;
-            overflow: hidden;
-            padding-bottom: 20px;
-        }
-
-        .grid-container{
-            display: grid;
-            row-gap: 30px;
-            column-gap: 10px;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            padding: 10px;
-            width: 98%;
-        }
-
-        .grid-container a {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-decoration: none;
-            color: #ffffffdc;
-            padding: 10px 20px;
-            background-color: #00000030;
-            border-radius: 5px;
-            margin: 0 10px;
-            height: fit-content;
-            box-shadow: rgb(7, 7, 12) 0px 13px 27px -5px, rgb(0, 0, 0) 0px 8px 16px -8px;
-            border-radius: 40px;
-        }
-
-        .count {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #bebebead;
-            border-radius: 13px;
-            height: 30px;
-            padding: 0 10px 0 10px;
-            box-shadow: rgb(0, 0, 0) 0px 30px 60px -50px inset, rgba(0, 0, 0, 0) 0px 18px 36px -18px inset;
-        }
-
-        .menu {
-            margin: 20px;
-            position: absolute;
-            text-decoration: none;
-            background-color: #00000030;
-            height: 60px;
-            width: 60px;
-            box-shadow: rgb(0, 0, 0) 0px 30px 60px -50px inset, rgba(0, 0, 0, 0) 0px 18px 36px -18px inset, rgb(7, 7, 12) 0px 13px 27px -5px, rgb(0, 0, 0) 0px 8px 16px -8px;
-        }
-
-        @media only screen and (max-width: 600px) { 
-            h1 {
-                margin-top: 0;
-                font-size: 2.5rem;
-                color: rgba(240, 248, 255, 0.774);
-                text-align: center;
-                margin: 20px 20px 35px 20px;
-            }
-
-            .bg {
-                transform: translateY(-20px);
-            }
-
-            .menu {
-                position: relative;
-                margin: 20px auto 0px auto;
-                height: 30px;
-                width: 120px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <div class="bg"></div>
-    <a href="changes.html" class="menu count"> changelog </a>
-    
+    <a href="changes" class="menu count"> changelog </a>
     <div class="wrapper">
-        <h1>Pick the format that suits your skin the best</h1>
-        <div class="grid-container">
-            <a href="No backpack only/SkinModTemplate-No-Backpack-Only.zip" class="page-link">
-                <h3>No-backpack only</h3>
-                <img src="Images/No-Backpack.png" alt="Button 1">
-                <p>
-                    (recommended) This template will always use the no-backpack sprite. All missing animations are filled in from the backpack sprite.
-                </p>
-                <div class="count">491 sprites</div>
-            </a>
-            <a href="Backpack only/SkinModTemplate-Backpack-Only.zip" class="page-link">
-                <h3>Backpack only</h3>
-                <img src="Images/Backpack.png" alt="Button 1">
-                <p>
-                    (recommended) This template will always use the backpack sprite. Has no-backpack exclusive animations.
-                </p>
-                <div class="count">491 sprites</div>
-            </a>
-            <a href="Both/SkinModTemplate-Both.zip" class="page-link">
-                <h3>Both</h3>
-                <img src="Images/Full.png" alt="Button 2">
-                <p>
-                    Use this if you want your character to have a separate set of sprites without a backpack. Works just like the normal game.
-                </p>
-                <div class="count">786 sprites</div>
-            </a>
-            <a href="Reduced spritecount/SkinModTemplate-Reduced-Spritecount.zip" class="page-link">
-                <h3>Reduced spritecount</h3>
-                <img src="Images/Reduced.png" alt="Button 3">
-                <p>
-                    This template changes, replaces and reuses animations to reduce the sprite count as much as possible. Get 85% of the quality with 1/4th of the work.
-                </p>
-                <div class="count">198 sprites</div>
-            </a>
-          </div>
+      <h1>Pick the format that suits your skin the best</h1>
+      <div class="grid-container">
+        <ol id="base" class="slider">
+          <li class="slider_page first">
+            <h3>No-backpack only</h3>
+            <img src="Images/No-Backpack.png" alt="Button 1">
+            <p>
+              (recommended) This template will always use the no-backpack sprite. All missing animations are filled in from the backpack sprite.
+            </p>
+            <div class="count">491 sprites</div>
+          </li>
+          <li class="slider_page">
+            <form>
+              <h1>Setup</h1>
+              <h3>Your Nickname</h3>
+              <input tabindex="-1" type="text" name="{YourName}" id="1">
+              <h3>Name of Your Character</h3>
+              <input tabindex="-1" type="text" name="{YourSkin}" id="1">
+              <br>
+              <input tabindex="-1" type="button" value="download" template="no_backpack_only" onclick="goBack(this)">
+              <p class="count">
+                These will be used to setup the skinmod for you.
+                Uppercase, lowercase and underscores are allowed.
+              </p>
+            </form>
+          </li>
+        </ol>
+
+        <ol id="base" class="slider">
+          <li class="slider_page first">
+            <h3>Backpack only</h3>
+            <img src="Images/Backpack.png" alt="Button 1">
+            <p>
+                (recommended) This template will always use the backpack sprite. Has no-backpack exclusive animations.
+            </p>    
+            <div class="count">491 sprites</div>
+          </li>
+          <li class="slider_page">
+            <form>
+              <h1>Setup</h1>
+              <h3>Your Nickname</h3>
+              <input tabindex="-1" type="text" name="{YourName}" id="1">
+              <h3>Name of Your Character</h3>
+              <input tabindex="-1" type="text" name="{YourSkin}" id="1">
+              <br>
+              <input tabindex="-1" type="button" value="download" template="backpack_only" onclick="goBack(this)">
+              <p class="count">
+                These will be used to setup the skinmod for you.
+                Uppercase, lowercase and underscores are allowed.
+              </p>
+            </form>
+          </li>
+        </ol>
+
+        <ol id="base" class="slider">
+          <li class="slider_page first">
+            <h3>Both</h3>
+            <img src="Images/Full.png" alt="Button 2">
+            <p>
+                Use this if you want your character to have a separate set of sprites without a backpack. Works just like the normal game.
+            </p>
+            <div class="count">786 sprites</div>
+          </li>
+          <li class="slider_page">
+            <form>
+              <h1>Setup</h1>
+              <h3>Your Nickname</h3>
+              <input tabindex="-1" type="text" name="{YourName}" id="1">
+              <h3>Name of Your Character</h3>
+              <input tabindex="-1" type="text" name="{YourSkin}" id="1">
+              <br>
+              <input tabindex="-1" type="button" value="download" template="both" onclick="goBack(this)">
+              <p class="count">
+                These will be used to setup the skinmod for you.
+                Uppercase, lowercase and underscores are allowed.
+              </p>
+            </form>
+          </li>
+        </ol>
+
+        <ol id="base" class="slider">
+          <li class="slider_page first">
+            <h3>Reduced spritecount</h3>
+            <img src="Images/Reduced.png" alt="Button 3">
+            <p>
+                This template changes, replaces and reuses animations to reduce the sprite count as much as possible. Get 85% of the quality with 1/4th of the work.
+            </p>
+            <div class="count">198 sprites</div>
+          </li>
+          <li class="slider_page">
+            <form>
+              <h1>Setup</h1>
+              <h3>Your Nickname</h3>
+              <input tabindex="-1" type="text" name="{YourName}" id="1">
+              <h3>Name of Your Character</h3>
+              <input tabindex="-1" type="text" name="{YourSkin}" id="1">
+              <br>
+              <input tabindex="-1" type="button" value="download" template="reduced_spritecount" onclick="goBack(this)">
+              <p class="count">
+                These will be used to setup the skinmod for you.
+                Uppercase, lowercase and underscores are allowed.
+              </p>
+            </form>
+          </li>
+        </ol>
+      </div>
     </div>
-    
+
+    <script src="jsZip/jszip.min.js"></script>
+    <script src="script.js"></script>
+    <script src="frontend.js"></script>
 </body>
 </html>
