--- a/celeste/tech/cassoosted-fuper.html
+++ b/celeste/tech/cassoosted-fuper.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Cassoosted Fuper</title>
 <meta name="description" content="
-A feather super is a jump out of a feather using the momentum of the feather. Cassette boost refers to the jump getting additional height from the cassette changing state during the jump. This tech isn't related to superdashes.
+A feather super is a jump out of a feather using the momentum of the feather. Cassette boost refers to the jump getting additional height from the cassette block changing state during the jump. This tech isn't related to superdashes.
 ">
 <meta property="og:image" content="https://kuksattu.github.io/celeste/tech/media/cassoosted-fuper.gif">
 <link type="application/json+oembed" href="https://kuksattu.github.io/celeste/tech/oembed/cassoosted-fuper.json" />
