Switch to a more consistent and easier naming scheme

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     behavior="alternate"
     style="border:solid; position:absolute;">
     <marquee behavior="alternate">
-        <a href="Celeste/SkinModTemplate/" class="page-link"> Celeste Skin Templates </a>
+        <a href="celeste/skin-mod-template/" class="page-link"> Celeste Skin Templates </a>
     </marquee>
 </marquee>
 
@@ -26,7 +26,7 @@
     scrollamount="13"
     style="border:solid; position:absolute; pointer-events: none;">
     <marquee behavior="alternate" direction="right" scrollamount="13">
-        <a href="Celeste/SkinCreator/SkinCreator.html" class="page-link" style="pointer-events: all;"> Skin Creator </a>
+        <a href="celeste/skin-creator/" class="page-link" style="pointer-events: all;"> Skin Creator </a>
     </marquee>
 </marquee>
 
